Feature/repo (#27)
* Separate store files

* Add initial repo impl for subscription

* Migrate to repo pattern

* Remove some functionality around keeping cells up to date (TODO: re-implement this)
